@@ -50,6 +50,7 @@ A.F....... [ZBXNEXT-1447] added initial Finnish translation (Richlv)
 ........S. [ZBX-5525] renamed macro {TRIGGER.COMMENT} to {TRIGGER.DESCRIPTION} (Sasha)
 
 Bug fixes:
+..F....... [ZBX-5720] fixed incorrect error when delete internal host group (Vedmak)
 A......... [ZBX-5714] fixed inconsistence between shorten and refer in UserMacro API (Eduard)
 A......... [ZBX-5643] fixed sql error by adding permission check for triggers when adding nonexistent dependencies via API (Toms)
 A......... [ZBX-5643] fixed circularity check for trigger addDependencies() in API (Toms)
